Oppdatering for inst #deploy-inst-service