@@ -4,7 +4,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.MapperFacade;
 import no.nav.dolly.bestilling.ClientRegister;
-import no.nav.dolly.bestilling.instdata.domain.DeleteResponseDTO;
 import no.nav.dolly.bestilling.instdata.domain.InstdataResponse;
 import no.nav.dolly.domain.jpa.Bestilling;
 import no.nav.dolly.domain.jpa.BestillingProgress;
@@ -13,76 +12,56 @@ import no.nav.dolly.domain.resultset.RsDollyUtvidetBestilling;
 import no.nav.dolly.domain.resultset.inst.Instdata;
 import no.nav.dolly.domain.resultset.tpsf.DollyPerson;
 import no.nav.dolly.errorhandling.ErrorStatusDecoder;
-import org.springframework.http.ResponseEntity;
+import no.nav.dolly.mapper.MappingContextUtils;
+import no.nav.dolly.util.TransactionHelperService;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
+import static java.util.Collections.emptyList;
 import static java.util.Objects.isNull;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
-import static org.springframework.http.HttpStatus.CREATED;
-import static org.springframework.http.HttpStatus.OK;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class InstdataClient implements ClientRegister {
 
-    private static final String OK_RESULT = "OK";
-
     private final MapperFacade mapperFacade;
     private final InstdataConsumer instdataConsumer;
     private final ErrorStatusDecoder errorStatusDecoder;
+    private final TransactionHelperService transactionHelperService;
 
     @Override
     public Flux<Void> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
         if (!bestilling.getInstdata().isEmpty()) {
 
-            StringBuilder status = new StringBuilder();
-            List<String> availEnvironments = instdataConsumer.getMiljoer();
+            try {
+                var test = instdataConsumer.getInstdataTest(dollyPerson.getHovedperson(), "q2").block();
+                log.info(test.getBody().textValue());
 
-            List<String> environments = new ArrayList<>(List.copyOf(availEnvironments));
-            environments.retainAll(bestilling.getEnvironments().isEmpty() ? environments : bestilling.getEnvironments());
-
-            if (!environments.isEmpty()) {
-
-                List<Instdata> instdataListe = mapperFacade.mapAsList(bestilling.getInstdata(), Instdata.class);
-                instdataListe.forEach(instdata ->
-                        instdata.setNorskident(dollyPerson.getHovedperson())
-                );
-
-                environments.forEach(environment -> {
-
-                    try {
-                        String postStatus = postInstdata(isOpprettEndre, instdataListe, environment);
-                        status.append(postStatus);
-
-                    } catch (RuntimeException e) {
-                        status.append(',')
-                                .append(environment)
-                                .append(':')
-                                .append(errorStatusDecoder.decodeThrowable(e));
-
-                        log.error("Feilet å legge til opphold for person: {} til INST miljø: {}", dollyPerson.getHovedperson(), environment, e);
-                    }
-                });
+            } catch (RuntimeException e) {
+                log.error("En feil oppsto {}", e.getMessage(), e);
             }
 
-            List<String> notSupportedEnvironments = new ArrayList<>(bestilling.getEnvironments());
-            notSupportedEnvironments.removeAll(availEnvironments);
-            notSupportedEnvironments.forEach(environment ->
-                    status.append(',')
-                            .append(environment)
-                            .append(":Feil: Miljø ikke støttet"));
+            var context = MappingContextUtils.getMappingContext();
+            context.setProperty("ident", dollyPerson.getHovedperson());
+            var instdata = mapperFacade.mapAsList(bestilling.getInstdata(), Instdata.class, context);
 
-            progress.setInstdataStatus(status.length() > 1 ? status.substring(1) : null);
+            instdataConsumer.getMiljoer()
+                    .flatMap(miljoer -> Flux.fromIterable(miljoer)
+                            .filter(miljoe -> bestilling.getEnvironments().contains(miljoe))
+                            .flatMap(miljoe -> postInstdata(isOpprettEndre, instdata, miljoe))
+                            .collect(Collectors.joining(",")))
+                    .subscribe(resultat -> {
+                        progress.setInstdataStatus(resultat);
+                        transactionHelperService.persister(progress);
+                    });
         }
         return Flux.just();
     }
@@ -91,13 +70,7 @@ public class InstdataClient implements ClientRegister {
     public void release(List<String> identer) {
 
         instdataConsumer.deleteInstdata(identer)
-                .subscribe(response -> log.info("Slettet antall {} identer fra Instdata",
-                        response.stream().collect(Collectors.groupingBy(DeleteResponseDTO::getEnvironment))
-                                .entrySet()
-                                .stream()
-                                .findFirst()
-                                .orElse(Map.entry("miljoe", Collections.emptyList()))
-                                .getValue().size()));
+                .subscribe(response -> log.info("Slettet antall {} identer fra Instdata", response.size()));
     }
 
     @Override
@@ -108,52 +81,40 @@ public class InstdataClient implements ClientRegister {
                         .allMatch(entry -> isNotBlank(entry.getInstdataStatus()));
     }
 
-    private List<Instdata> filterInstdata(List<Instdata> instdataRequest, String miljoe) {
+    private Mono<List<Instdata>> filterInstdata(List<Instdata> instdataRequest, String miljoe) {
 
-        ResponseEntity<List<Instdata>> eksisterendeInstdata = instdataConsumer.getInstdata(instdataRequest.get(0).getNorskident(), miljoe);
-
-        if (eksisterendeInstdata.hasBody() && !eksisterendeInstdata.getBody().isEmpty()) {
-
-            return instdataRequest.stream().filter(request -> eksisterendeInstdata.getBody().stream()
-                            .noneMatch(eksisterende -> eksisterende.equals(request)))
-                    .collect(Collectors.toList());
-        } else {
-
-            return instdataRequest;
-        }
+        return instdataConsumer.getInstdata(instdataRequest.get(0).getNorskident(), miljoe)
+                .map(eksisterende -> {
+                    log.info("Instdata hentet data fra {}: {}", miljoe, eksisterende.getInstitusjonsopphold());
+                    return instdataRequest.stream()
+                            .filter(request -> eksisterende.getInstitusjonsopphold()
+                                    .getOrDefault(miljoe, emptyList()).stream()
+                                    .noneMatch(opphold -> request.equals(opphold)))
+                            .toList();
+                });
     }
 
-    private String postInstdata(boolean isNewOpphold, List<Instdata> instdata, String environment) {
+    private String getStatus(InstdataResponse response) {
 
-        StringBuilder status = new StringBuilder();
-
-        List<Instdata> newInstdata = isNewOpphold ? instdata : filterInstdata(instdata, environment);
-
-        if (!newInstdata.isEmpty()) {
-            ResponseEntity<List<InstdataResponse>> response = instdataConsumer.postInstdata(newInstdata, environment);
-
-            if (response.hasBody()) {
-
-                for (int i = 0; i < response.getBody().size(); i++) {
-                    status.append(',')
-                            .append(environment)
-                            .append(':')
-                            .append("opphold=")
-                            .append(i + 1)
-                            .append('$')
-                            .append(CREATED.equals(response.getBody().get(i).getStatus()) || OK.equals(response.getBody().get(i).getStatus()) ? OK_RESULT :
-                                    errorStatusDecoder.getErrorText(response.getBody().get(i).getStatus(),
-                                            response.getBody().get(i).getFeilmelding()));
-                }
-            }
-
-        } else {
-            status.append(',')
-                    .append(environment)
-                    .append(":opphold=1$OK");
-        }
-
-        return status.toString();
+        return response.getStatus().is2xxSuccessful() ? "OK" :
+                errorStatusDecoder.getErrorText(response.getStatus(),
+                        response.getFeilmelding());
     }
 
+    private Mono<String> postInstdata(boolean isNewOpphold, List<Instdata> instdata, String miljoe) {
+
+        var oppholdId = new AtomicInteger(0);
+
+        return (isNewOpphold ? Mono.just(instdata) : filterInstdata(instdata, miljoe))
+                .flatMap(newInstdata -> {
+                    if (!newInstdata.isEmpty()) {
+                        return instdataConsumer.postInstdata(newInstdata, miljoe)
+                                .map(response -> String.format("%s:opphold=%d$%s",
+                                        miljoe, oppholdId.incrementAndGet(), getStatus(response)))
+                                .collect(Collectors.joining(","));
+                    } else {
+                        return Mono.just(miljoe + ":opphold=1$OK");
+                    }
+                });
+    }
 }
